Update on Overleaf.

--- a/EMEP_Reports.bib
+++ b/EMEP_Reports.bib
@@ -3579,3 +3579,34 @@ emissions for residential wood combustion},
   publisher = metno,
   year = {2020}
 }
+
+@incollection{Platt:2020a,
+ author = {Platt, S. M. and Yttri, K. E. and Aas, W.},
+ year =  2020,
+ title={The winter 2017/2018 intensive measurement period. A brief update.},
+ booktitle = {Transboundary particulate matter, photo-oxidants, acidifying and
+                eutrophying components (EMEP Status Report 1/2020)},
+ publisher=metno,
+ pages = {145--152}
+}
+
+@incollection{Platt:2020b,
+ author = {Platt, S. M. and Yttri, K. E. and Aas, W. and Solberg, S. and
+  Fagerli, H. and Nyiri, A. and Tsyro, S. and Benedictow, A. and
+  Denier van der Gon, H. A. C. and Bergstr{\"o}m, R. and Simpson, D.},
+ year = 2020,
+ title={The winter 2018 intensive measurement period. A brief update.},
+ booktitle={Transboundary particulate matter, photo-oxidants, acidifying and
+              eutrophying components (EMEP Status Report 1/2019)},
+ publisher=metno,
+ pages= {89--105}
+}
+
+@incollection{Yttri:2014,
+ author = {Yttri, K. E. and Tsyro, S. and Solberg, S. and Alastuey, A. and Aas, W.},
+ year = 2014,
+ title={Improved source understanding.},
+ booktitle = {Transboundary particulate matter, photo-oxidants, acidifying and eutrophying components (EMEP Status Report, 1/2014)},
+ publisher=metno,
+ pages = {pp. 83--104)}
+}
