--- a/trends.bib
+++ b/trends.bib
@@ -1160,4 +1160,36 @@ year = {2016}
   doi={10.5194/acp-19-10497-2019}
 }
 % - - - - - - - - - - - - - - - - - - - -
+@article{ChangK-L:2017,
+ author = {Chang, Kai-Lan and Petropavlovskikh, Irina and Cooper, Owen R. and Schultz, Martin G. and Wang, Tao},
+ title = "{Regional trend analysis of surface ozone observations from monitoring networks in eastern North America, Europe and East Asia}",
+ journal = {Elementa: Science of the Anthropocene},
+ volume = {5},
+ year = {2017},
+ month = {09},
+ issn = {2325-1026},
+ doi = {10.1525/elementa.243},
+ url = {https://doi.org/10.1525/elementa.243},
+ note = {50}
+}
 
+@Article{LefohnTOAR2018,
+  author   = {Lefohn AS, Malley CS, Smith L, Wells B, Hazucha M, Simon H, et al.},
+  title    = {Tropospheric ozone assessment report: Global ozone metrics for climate change, human health, and crop/ecosystem research.},
+  journal  = {Elem Sci Anth.},
+  year     = {2018},
+  volume   = {6},
+  number   = {1},
+  pages    = {28},
+  doi      = {http://doi.org/10.1525/elementa.279}
+ }
+
+@book{DavisonHinkley:1997,
+ author = {A. C. Davison, and Hinkley, D.V.},
+ authaddress={Swiss Federal Institute of Technology, Z{\"u}rich, University of California, Santa Barbara},
+ publisher  ={Cambridge University Press},
+ isbn = {9780511802843 (online)},
+ year = 1997,
+ onlineyear={June 2013},
+ doi = {https://doi.org/10.1017/CBO9780511802843}
+}
