--- a/chapterMeasurementDevelopments.tex
+++ b/chapterMeasurementDevelopments.tex
@@ -5,7 +5,7 @@
 
 \section{\label{sec:Compliance-with-monitoring}Compliance with the EMEP monitoring strategy}
 
-The monitoring obligations in EMEP were updated in 2019 and is defined in the Monitoring Strategy for 2019-2030 (\cite{MonStrat2019}). 
+The monitoring obligations of EMEP were updated in 2019 and is defined by the Monitoring Strategy for 2020-2030 (\cite{MonStrat2019}). 
 
 The complexity in the monitoring program with respect to the number of variables and sites, whether parameters are at level 1 or level 2, and the required time resolution (hourly, daily, weekly), makes it challenging to assess whether a country is in compliance. CCC has developed an index to illustrate to what extent the Parties comply, how implementation compares with other countries, and how activities evolve with time.
 
@@ -20,7 +20,7 @@ In large parts of Europe, implementation of the EMEP monitoring strategy is far 
 	\caption{\label{fig:Index-for-implementation}Index for implementation of the EMEP monitoring strategy, level 1 based on what has been reported for 2000, 2005, 2010 and 2019. {*} means adjusted land area.}
 \end{figure}
 
-For the level 2 parameters, an index has not been defined, but mapping the site distribution illustrate the compliance to the monitoring strategy. 56 sites from 21 different Parties reported  at least one of the required  EMEP level 2 parameters relevant to this report (aerosols (50 sites), photo-oxidants (16 sites) and atmospheric tracers (8 sites)). One should note that some of these sites have been reporting data to ACTRIS (the European Research Infrastructure for the observation of Aerosol, Clouds and Trace Gases) and not to EMEP, but they have been included here in the overview since the observations are still comparable with those of EMEP. The sites with measurements of POPs and heavy metals are covered in the EMEP status report published by MSC-E (EMEP Status report 2/2021).  Figure~\ref{fig:levell2-sites} shows that level 2 measurements of aerosols have better spatial coverage than oxidant precursors (VOC + methane) and atmospheric tracers. Few sites have a complete measurement program, and only 12 sites have a complete aerosol program. Nevertheless, regarding the aerosol monitoring, there have been large improvements in the spatial coverage and the data quality over the last decade, especially for the aerosol observations. For oxidant precursors and atmospheric tracers, there are ongoing improvement in the measurement capabilities resulting from development in ACTRIS in co-operation with EMEP and the WMO Global Atmospheric Watch Programme (GAW).
+For the level 2 parameters, an index has not been defined, but mapping the site distribution illustrate the compliance to the monitoring strategy. 56 sites from 21 different Parties reported  at least one of the required  EMEP level 2 parameters relevant to this report (aerosols (50 sites), photo-oxidants (16 sites) and atmospheric tracers (8 sites)). One should note that some of these sites have been reporting data to ACTRIS (the European Research Infrastructure for the observation of Aerosol, Clouds and Trace Gases) and not to EMEP, but they have been included here in the overview since the observations are still comparable with those of EMEP. The sites with measurements of POPs and heavy metals are covered in the EMEP status report published by MSC-E (EMEP Status report 2/2021).  Figure~\ref{fig:levell2-sites} shows that level 2 measurements of aerosols have better spatial coverage than oxidant precursors (VOC + methane) and atmospheric tracers. Few sites have a complete measurement program, and only 12 sites have a complete aerosol program. For oxidant precursors and atmospheric tracers, there are ongoing improvement in the measurement capabilities resulting from development in ACTRIS in co-operation with EMEP and the WMO Global Atmospheric Watch Programme (GAW).
 
 \begin{figure}[h!]
  \centering
