--- a/report.tex
+++ b/report.tex
@@ -337,6 +337,7 @@
 %\includeonly{acknow}
 %\includeonly{chapterStatus2019,chapterTrendsSandN,chapterAPPX_ModelEval}
 %\includeonly{chapterMeasurementDevelopments}
+%\includeonly{chapterEmis2019}
 
 %Please:if you use includeonly on overleaf, just do it temporary and set it back after you have compiled (since others will only see 'your chapter')
 
