Update on Overleaf.

--- a/report.tex
+++ b/report.tex
@@ -39,7 +39,7 @@
 \usepackage{amsmath}
 \usepackage{ifthen}                   % \ifthenelse command
 \usepackage{xspace}                   % adds space only when needed
-\usepackage{hyphenat}                 % \hyph avoid overfull hbox
+%\usepackage{hyphenat}                 % \hyph avoid overfull hbox
 \usepackage[version=3]{mhchem}        % chemical molecular formulae, e.g. \ce{H2O}
 %\usepackage{fancyhdrs}               % old version of fancyheadings
 \usepackage{fancyhdr}                 %  Works with texlive
@@ -365,7 +365,7 @@
 
 \part{Status of air pollution}
 \include{chapterStatus2019} 
-%\include{chapterEmis2019} 
+\include{chapterEmis2019} 
 
 \part{Trends in air pollution} 
 
