--- a/trends.bib
+++ b/trends.bib
@@ -1174,7 +1174,7 @@ year = {2016}
 }
 
 @Article{LefohnTOAR2018,
-  author   = {Lefohn AS, Malley CS, Smith L, Wells B, Hazucha M, Simon H, et al.},
+    author = {Lefohn, Allen S. and Malley, Christopher S. and Smith, Luther and Wells, Benjamin and Hazucha, Milan and Simon, Heather and Naik, Vaishali and Mills, Gina and Schultz, Martin G. and Paoletti, Elena and De Marco, Alessandra and Xu, Xiaobin and Zhang, Li and Wang, Tao and Neufeld, Howard S. and Musselman, Robert C. and Tarasick, David and Brauer, Michael and Feng, Zhaozhong and Tang, Haoye and Kobayashi, Kazuhiko and Sicard, Pierre and Solberg, Sverre and Gerosa, Giacomo},
   title    = {Tropospheric ozone assessment report: Global ozone metrics for climate change, human health, and crop/ecosystem research.},
   journal  = {Elem Sci Anth.},
   year     = {2018},
