includeonly acknow for test

--- a/report.tex
+++ b/report.tex
@@ -334,7 +334,7 @@
 
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\includeonly{acknow}
+\includeonly{acknow}
 %\includeonly{chapterStatus2019,chapterTrendsSandN,chapterAPPX_ModelEval}
 %\includeonly{chapterMeasurementDevelopments}
 %\includeonly{chapterEmis2019}
