Update on Overleaf.

--- a/report.tex
+++ b/report.tex
@@ -334,8 +334,8 @@
 
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\includeonly{acknow}
-%\includeonly{chapterStatus2019,chapterTrendsSandN,chapterAPPX_ModelEval}
+%\includeonly{acknow}
+\includeonly{chapterStatus2019,chapterTrendsSandN,chapterAPPX_ModelEval}
 %\includeonly{chapterMeasurementDevelopments}
 %\includeonly{chapterEmis2019}
 
@@ -365,7 +365,7 @@
 
 \part{Status of air pollution}
 \include{chapterStatus2019} 
-\include{chapterEmis2019} 
+%TMP\include{chapterEmis2019} 
 
 \part{Trends in air pollution} 
 
