--- a/report.tex
+++ b/report.tex
@@ -335,7 +335,7 @@
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\includeonly{acknow}
-\includeonly{chapterStatus2019,chapterTrendsSandN,chapterAPPX_ModelEval}
+%works: \includeonly{chapterStatus2019,chapterEmis2019,chapterTrendsSandN,chapterAPPX_ModelEval}
 %\includeonly{chapterMeasurementDevelopments}
 %\includeonly{chapterEmis2019}
 
@@ -365,7 +365,7 @@
 
 \part{Status of air pollution}
 \include{chapterStatus2019} 
-%TMP\include{chapterEmis2019} 
+\include{chapterEmis2019} 
 
 \part{Trends in air pollution} 
 
