--- a/trends.bib
+++ b/trends.bib
@@ -1185,7 +1185,7 @@ year = {2016}
  }
 
 @book{DavisonHinkley:1997,
- author = {A. C. Davison, and Hinkley, D.V.},
+ author = {Davison, A.C. and Hinkley, D.V.},
  publisher  ={Cambridge University Press},
  title={Bootstrap Methods and their Application},
  isbn = {9780511802843 (online)},
