--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -514,4 +514,5 @@ Notes: (a) R2018 refers to EMEP Status report 1/2018, etc.
 \bibliographystyle{copernicus}         % change bibliography-name after each
 \renewcommand\bibname{References}      % bibliographystyle command!
 \addcontentsline{toc}{section}{References}
-\bibliography{Refs,EMEP_Reports,uEMEP,RefsUpdates,RefsEmis}
+%\bibliography{Refs,EMEP_Reports,uEMEP,RefsUpdates,RefsEmis}
+\bibliography{Refs2021}
