--- a/chapterEmis2019.tex
+++ b/chapterEmis2019.tex
@@ -389,4 +389,5 @@ Based on the complied datasets in 2021, it is worth noting that the 2000 to 2019
 \bibliographystyle{copernicus}         % change bibliography-name after each
 \renewcommand\bibname{References}      % bibliographystyle command!
 \addcontentsline{toc}{section}{References}
-\bibliography{Refs,EMEP_Reports,RefsEmis}
+%\bibliography{Refs,EMEP_Reports,RefsEmis}
+\bibliography{Refs2021}
