--- a/chapterMeasurementDevelopments.tex
+++ b/chapterMeasurementDevelopments.tex
@@ -65,4 +65,5 @@ There is ongoing work to make the  access of data even more flexible to meet sev
 \bibliographystyle{copernicus}         % change bibliography-name after each
 \renewcommand\bibname{References}      % bibliographystyle command!
 \addcontentsline{toc}{section}{References}
-\bibliography{Refs,EMEP_Reports}
+%\bibliography{Refs,EMEP_Reports}
+\bibliography{Refs2021}
