--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -1346,4 +1346,5 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
 \bibliographystyle{copernicus}         % change bibliography-name after each
 \renewcommand\bibname{References}      % bibliographystyle command!
 \addcontentsline{toc}{section}{References}
-\bibliography{trends,Refs,EMEP_Reports,NILU,RefsUpdates,RefsEmis}
+%\bibliography{trends,Refs,EMEP_Reports,NILU,RefsUpdates,RefsEmis}
+\bibliography{Refs2021}
