--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -337,4 +337,5 @@ In Figure \ref{wdeps} wet depositions of nitrogen and sulphur compounds are comp
 \bibliographystyle{copernicus}         % change bibliography-name after each
 \renewcommand\bibname{References}      % bibliographystyle command!
 \addcontentsline{toc}{section}{References}
-\bibliography{Refs,EMEP_Reports,RefsMeteo,RefStatusPM}
+%\bibliography{Refs,EMEP_Reports,RefsMeteo,RefStatusPM}
+\bibliography{Refs2021}
