Update on Overleaf.

--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -9,10 +9,10 @@ for 2019. It presents major results of the activities related to
 emission inventories, observations and modelling. The report also
 introduces specific relevant research activities addressing EMEP key
 challenges, as well as technical developments of the observation and
-modelling capacities. This year special attention has been given to the trends in air pollution during the last decades
+modelling capacities. This year special attention has been given to the trends in air pollution during the last decades, in support of the Gothenburg Protocol review.
 
 \subsubsection*{Measurements and model results for 2019} %Wenche, Svetlana, Sverre, Hilde to write
-In the first chapter, the status of air pollution in 2018 is presented, combining 
+In the first chapter, the status of air pollution in 2019 is presented, combining 
 meteorological information and emissions with numerical simulations using the EMEP MSC-W model together with observed air concentration and deposition data.
 %Wenche rewrite:
 Altogether 35 Parties reported measurement data for 2018, from 170 sites in total. 
@@ -33,21 +33,13 @@ The distribution of the regional background PM is fairly homogeneous over most o
 There is good agreement between the modelled and observed \PM[10] and \PM[2.5], with annual mean model biases of -22\% and -14\% and correlation coefficients of 0.66 and 0.81, respectively.
 
 Model results and EMEP observational data show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug in Europe in 2018, but some exceedances of the WHO recommended AQG of 20 \ug occurred. 
-%The highest observed annual mean \PM[10] of 26 \ug was registered at Slovakian SK0007, followed by 25 \ug at Greek GR0001 and 24 \ug at Cypriot CY0002. 
 The annual mean \PM[2.5] concentrations in 2018 were below the EU limit value of 25 \ug (except modelled \PM[2.5] for the Po Valley). However, exceedances of the WHO AQG value of 10 \ug by annual mean \PM[2.5] were observed at seventeen sites.%, with the highest values registered in Hungary (16 \ug at HU0003 and 15.5 \ug at HU0002).
 
 Out of the 62 sites, days with \PM[10] exceedances of 50 \ug were observed at 36, but in all cases with fewer than the upper EU-limit of 35 days per year registered. Still, 18 sites had more than 3 exceedance days (the upper limit recommended by the WHO AQGs). %The highest numbers of days with observed exceedances of \PM[10] were 25 at CY0002 and SK0007, and 17 at CZ0003. 
-Daily mean \PM[2.5] concentrations exceeded the WHO AQG recommended of value 25 \ug at 31 out of 41 stations in 2018. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  %The highest number of exceedance days registered were 50, observed at HU0002, IT0004 and PL0009.
-%, followed by 49 and 48 at AT0002 and HU0003, respectively.
+Daily mean \PM[2.5] concentrations exceeded the WHO AQG recommended of value 25 \ug at 31 out of 41 stations in 2018. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  
 The modelled numbers of exceedance days in 2018 show in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. The model has a tendency of underestimating the frequency of exceedance days at some Central European sites
-%(e.g. at SK0007, CZ0003 and HU0002 for \PM[10] and at PL0009, AT0002 and HU0003 for \PM[2.5]) 
 and overestimating at some Mediterranean sites. 
-%(notably at CY0002 and ES0007), influenced by Saharan dust. 
-The majority of PM exceedances occurred during the winter and autumn 2018 at Central European sites,
-%(and also in spring at e.g. Polish, Dutch, and Hungarian sites). 
-whereas 
-%they were more frequent 
-during the summer at the Mediterranean sites. Remarkably, the largest number of \PM[2.5] exceedances at three out of four German sites occurred in spring, while much fewer occurred during the cold seasons.
+The majority of PM exceedances occurred during the winter and autumn 2018 at Central European sites, whereas during the summer at the Mediterranean sites. Remarkably, the largest number of \PM[2.5] exceedances at three out of four German sites occurred in spring, while much fewer occurred during the cold seasons.
 
 
 
@@ -56,7 +48,7 @@ during the summer at the Mediterranean sites. Remarkably, the largest number of 
 %Something about wet dep, Hilde
 
 
-%\subsubsection*{The summer of 2018}
+%\subsubsection*{The summer of 2018} OLD
 %During April/May-August parts of Europe experienced a persistent heat wave. Northern Europe and in particular the Nordic countries and the UK were most heavily affected, but also central parts of the continent experienced long-lasting heat and drought in summer. The heat and drought affected the atmospheric level of pollutants in many ways. Tropospheric ozone is strongly tied to the meteorological conditions, and hot, sunny and dry weather conditions can lead to increased ozone levels in many ways. 
 
 %The continent experienced a series of ozone episodes during April/May-August. The most pronounced lasted from the last part of July to the first days of August when areas from Southern Italy to Scandinavia were affected and peak values exceeding 100 ppb were seen at several sites. Another marked ozone episode was seen one month earlier, from the end of June to the first week of July, mainly affecting Central Europe.
@@ -68,7 +60,7 @@ during the summer at the Mediterranean sites. Remarkably, the largest number of 
 
 
 \subsubsection*{Status of emission reporting}
-In 2021, 48 out of 51 Parties (94$\%$) submitted emission inventories to the EMEP Centre on Emission Inventories and Projections (CEIP), and 42 Parties reported black carbon (BC) emissions. As 2021 is a reporting year for large point sources (LPS) and gridded emissions, 32 Parties reported information on LPS, 26 Parties reported gridded data. The quality of reported emission data differs significantly across countries, and the uncertainty of the data is considered to be relatively high.
+In 2021, 48 out of 51 Parties (94$\%$) submitted emission inventories to the EMEP Centre on Emission Inventories and Projections (CEIP), and 42 Parties reported black carbon (BC) emissions. As 2021 is a reporting year for large point sources (LPS) and gridded emissions, 32 Parties reported information on LPS while 26 Parties reported gridded data. The quality of reported emission data differs significantly across countries, and the uncertainty of the data is considered to be relatively high.
 
 Estimates of PM emissions as currently provided by Parties have a number of major uncertainties, and there is a clear need for clarification and standardisation of the methods used to define and report PM emissions. 
 Previous work has clearly shown that the definitions behind national emission estimates are inconsistent in their treatment of condensable organics: some countries explicitly do not include condensables in their PM inventories, some likely include condensables and for some it is mixed or unclear.
@@ -76,14 +68,16 @@ Previous work has clearly shown that the definitions behind national emission es
 %Parties were asked to include a table with information on the condensable component in their reporting of PM emissions. This year, 23 Parties provided such information. 
 The treatment of condensable organics in emission factors is best known for the emissions from the energy sector and road transport, while it is less clear for small-scale combustion, which is one of the sources where the largest impact on the emission factor occur.
 
-In March 2020, MSC-W hosted an expert workshop on condensables, which brought together experts in emissions, measurements, inventories, and policy from Europe and North America, and created a much better understanding of the issues and
-possible approaches for dealing with this important class of compounds.
-Discussions at the NMR workshop confirmed that even when countries did include condensables, there were significant differences in the methodologies used.
-To improve the quality of the input data for air quality models,  and following a decision of the EMEP Bureaux, the group of experts at the NMR workshop agreed on the following approach: 1) in year one (2020) the so-called REF2 emission data provided by TNO, which include condensable organics,  is used in an initial estimate for residential combustion emissions and 2) in subsequent years these top-down estimates should be increasingly replaced by national estimates once procedures for quantifying condensables in a more harmonized way are agreed on and implemented. 
+%In March 2020, MSC-W hosted an expert workshop on condensables, which brought together experts in emissions, measurements, inventories, and policy from Europe and North America, and created a much better understanding of the issues and
+%possible approaches for dealing with this important class of compounds.
+%Discussions at the NMR workshop confirmed that even when countries did include condensables, there were significant differences in the methodologies used.
+To improve the quality of the input data for air quality models, and following a decision of the EMEP Bureaux, the group of experts at the expert workshop on condensable organics hosted by MSC-W in 2020 agreed on the following approach: 1) in year one (2020) use the so-called REF2 emission data provided by TNO, which include condensable organics, as an initial estimate for residential combustion emissions and 2) in subsequent years these top-down estimates should be increasingly replaced by national estimates once procedures for quantifying condensable organics in a more harmonized way are agreed on and implemented. 
 
-Therefore, the assessment of the air quality situation in Europe and source receptor calculations for 2019 made this year, have been conducted with official EMEP emissions combined with TNO REF2.1 emissions for the GNFR sector C for PM (EMEPwREF2.1C). CEIP in co-operation with TNO prepared a list of Parties where it could be assumed with a good degree of certainty that the condensable component is mostly included in PM emissions for GNFR sector C. For these Parties the reported PM emissions were used, while for other Parties the TNO REF2.1 data were used for GNFR sector C in the EMEPwREF2.1C dataset.
+In 2021, CEIP in co-operation with TNO prepared a list of Parties where it could be assumed with a good degree of certainty that the condensable component is mostly included in PM emissions for GNFR sector C. For these Parties the reported PM emissions were used, while for other Parties the TNO REF2.1 data were used for GNFR sector C. The resulting GNFR C data set were combined with official EMEP emissions into the so-called EMEPwREF2.1C emission dataset. This emission data set has been used in the assessment of the air quality situation in Europe and the source receptor calculations for 2019 made this year. 
 
-The 1999 Gothenburg Protocol lists emission reduction commitments of NO$_x$, SO$_x$, NH$_3$ and NMVOCs for most of the Parties to the LRTAP Convention for the year 2010. These commitments should not be exceeded in 2010 nor in subsequent years. When considering only reported data, approved adjustments and fuel use data of the respective countries, it can be seen that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
+%The assessment of the air quality situation in Europe and the source receptor calculations for 2019 made this year have been conducted with the EMEPwREF2.1C emission dataset.
+%official EMEP emissions combined with TNO REF2.1 emissions for the GNFR sector C for PM (EMEPwREF2.1C). 
+The 1999 Gothenburg Protocol lists emission reduction commitments of NO$_x$, SO$_x$, NH$_3$ and NMVOCs for most of the Parties to the LRTAP Convention for the year 2010\COMMENT{WHY DO THEY TALK ABOUT THE 2010 targets and not the 2020 targets?Should we include this?}. These commitments should not be exceeded in 2010 nor in subsequent years. When considering only reported data, approved adjustments and fuel use data of the respective countries, it can be seen that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
 
 After the first round of submissions in 2017, 2021 was the second year for which EMEP countries were obliged to report gridded emissions in  0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude resolution. Until June 2021, 34 of the 48 countries which are considered to be part of the EMEP area reported sectoral gridded emissions in this resolution. For remaining areas, missing emissions are gap-filled and spatially distributed using expert estimates.
 
