--- a/chapterAPPX_EMIS_2019.tex
+++ b/chapterAPPX_EMIS_2019.tex
@@ -36,7 +36,8 @@ Note that emissions in this appendix are given in different units than used else
 \bibliographystyle{copernicus}
 \renewcommand\bibname{References}    
 \addcontentsline{toc}{section}{References}
-\bibliography{Refs,EMEP_Reports}
+%\bibliography{Refs,EMEP_Reports}
+\bibliography{Refs2021}
 
 \clearpage
  
