--- a/chapterAPPX_EMIS_trends.tex
+++ b/chapterAPPX_EMIS_trends.tex
@@ -38,7 +38,7 @@ with the reported data.
 \renewcommand\bibname{References}    % Crude - set Bibliography to References
 \addcontentsline{toc}{section}{References}
 %ORIG: \bibliography{bibrefs}
-\bibliography{Refs,EMEP_Reports}
+\bibliography{Refs2021} % ,EMEP_Reports}
 
 \cleartoleftpage
 
