--- a/chapterAPPX_trends.tex
+++ b/chapterAPPX_trends.tex
@@ -204,10 +204,11 @@ SE0011(20)R &  x &   x &    x &      x &   x &    x &    x &    x &      x &    
  \end{table}
 \vfill
 
-%\bibliographystyle{copernicus}
-%\renewcommand\bibname{References}    % Crude - set Bibliography to References
-%\addcontentsline{toc}{section}{References}
+\bibliographystyle{copernicus}
+\renewcommand\bibname{References}    % Crude - set Bibliography to References
+\addcontentsline{toc}{section}{References}
 %ORIG: \bibliography{bibrefs}
 %\bibliography{Refs,EMEP_Reports}
+\bibliography{Refs2021}
 
 \cleartoleftpage
